# swagger.json
@@ -160,6 +160,104 @@
           }
         }
       }
+    },
+    "/templates": {
+      "post": {
+        "summary": "Create a new template",
+        "description": "Adds a new template with userId, timestamp, name, and categories.",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/TemplateRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Template created successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": { "type": "string" },
+                    "template": {
+                      "type": "object",
+                      "properties": {
+                        "userId": { "type": "string" },
+                        "timestamp": { "type": "number" },
+                        "name": { "type": "string" },
+                        "categories": {
+                          "type": "array",
+                          "items": {
+                            "type": "object",
+                            "properties": {
+                              "name": { "type": "string" },
+                              "timestamp": { "type": "number" },
+                              "id": { "type": "string" },
+                              "ingredients": {
+                                "type": "array",
+                                "items": { "type": "string" }
+                              }
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "summary": "Get a list of templates",
+        "description": "Retrieves a paginated list of templates.",
+        "parameters": [
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "description": "Number of templates to retrieve",
+            "schema": {
+              "type": "integer",
+              "default": 10
+            }
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "description": "Number of templates to skip",
+            "schema": {
+              "type": "integer",
+              "default": 0
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of templates retrieved successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/TemplateResponse"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Failed to retrieve templates"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -194,6 +292,53 @@
             "$ref": "#/components/schemas/Ingredient"
           }
         }
+      },
+      "TemplateRequest": {
+        "type": "object",
+        "properties": {
+          "timestamp": { "type": "number" },
+          "name": { "type": "string" },
+          "categories": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "name": { "type": "string" },
+                "timestamp": { "type": "number" },
+                "id": { "type": "string" },
+                "ingredients": {
+                  "type": "array",
+                  "items": { "type": "string" }
+                }
+              }
+            }
+          }
+        },
+        "required": ["userId", "name", "categories"]
+      },
+      "TemplateResponse": {
+        "type": "object",
+        "properties": {
+          "userId": { "type": "string" },
+          "timestamp": { "type": "number" },
+          "name": { "type": "string" },
+          "categories": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "name": { "type": "string" },
+                "timestamp": { "type": "number" },
+                "id": { "type": "string" },
+                "ingredients": {
+                  "type": "array",
+                  "items": { "type": "string" }
+                }
+              }
+            }
+          }
+        },
+        "required": ["userId", "name", "categories"]
       }
     }
   }
